--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/vision": "^3.79.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq": "^3.79.0",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-sanity": "^9.9.4",
