--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/nextjs": "^6.12.5",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@radix-ui/themes": "^3.2.1",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
